syntax = "proto3";

package permission.v1;
option go_package = "github.com/saurabh/entgo-microservices/pkg/proto/permission/v1;permissionv1";

import "google/protobuf/timestamp.proto";

service PermissionService {
  rpc GetPermissionByID(GetPermissionByIDRequest) returns (GetPermissionByIDResponse);
  rpc GetPermissionsByIDs(GetPermissionsByIDsRequest) returns (GetPermissionsByIDsResponse);
}

message Permission {
  int32 id = 1;
  string name = 2;
  string display_name = 3;
  string description = 4;
  string resource = 5;
  bool is_active = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message GetPermissionByIDRequest {
  int32 id = 1;
}

message GetPermissionByIDResponse {
  Permission permission = 1;
}

message GetPermissionsByIDsRequest {
  repeated int32 ids = 1;
}

message GetPermissionsByIDsResponse {
  repeated Permission permissions = 1;
}
