syntax = "proto3";

package user.v1;
option go_package = "github.com/saurabh/entgo-microservices/pkg/proto/user/v1;userv1";

import "google/protobuf/timestamp.proto";

service UserService {
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
  rpc GetUsersByIDs(GetUsersByIDsRequest) returns (GetUsersByIDsResponse);
}

message User {
  int32 id = 1;
  string email = 2;
  string username = 3;
  string password_hash = 4;
  string name = 5;
  string phone = 6;
  string address = 7;
  string user_type = 8;
  string user_code = 9;
  string company_name = 10;
  string customer_type = 11;
  int32 payment_terms = 12;
  bool is_active = 13;
  bool email_verified = 14;
  optional google.protobuf.Timestamp email_verified_at = 15;
  optional google.protobuf.Timestamp last_login = 16;
  google.protobuf.Timestamp created_at = 17;
  google.protobuf.Timestamp updated_at = 18;
}

message GetUserByIDRequest {
  int32 id = 1;
}

message GetUserByIDResponse {
  User user = 1;
}

message GetUsersByIDsRequest {
  repeated int32 ids = 1;
}

message GetUsersByIDsResponse {
  repeated User users = 1;
}
